--- a/Speakers/sorkin.html
+++ b/Speakers/sorkin.html
@@ -11,7 +11,7 @@
 	<main>
 		<h1>Andrew Ross Sorkin</h1>
 		<h2>This page is under construction.</h2>
-		<p><a href='index.html/../Speakers'>Return to the index page.</a></p>
+		<p><a href='../index.html/Speakers/sorkin.html'>Return to the index page.</a></p>
 	</main>
 </body>
 
